feat: replace manual zod schemes for api and web
